# MLOps-Web-Application

./: README.md  app.py  pyproject.toml  requirements.txt
configs/: config.yaml
data/: 01_homely_resort_listing.csv  02_mushroom_data.csv
models/nas_rental_prediction/: best_model_new_saved.pkl
models/shaqirah_mushroom/: feature_engineering_model.pkl
notebooks/: Nas_Task1_Task2_214326Z.ipynb  Shaqirah_Task1_Task2_210885K.ipynb
scripts/: train_model.py
templates/: nas_rental_prediction.html  navbar.html  shaqirah_mushroom_classification.html
